--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello world</h1>
     <p>hello my friend</p>
     <P>jglad lkdjfla</P>
+    <p>tis is the second commit</p>
 </body>
 </html>
